# SuperMario-Project

./: CMakeLists.txt  README.md  SuperMario.cpp  bakgrunn.cpp  bricks.cpp  castle.cpp  coin.cpp  entities.cpp  global.hpp  goomba.cpp  ground.cpp  main.cpp  pole.cpp
Diverse/: Credit for Materials used in Mario Project.docx  IKT103.docx  UML Diagram.drawio
